[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>com.github.avaliani.snapshot</groupId>
     <artifactId>webapp-snapshot-java</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Web Application Snapshot Middleware and API</name>
@@ -33,7 +33,7 @@
         <connection>scm:git:git@github.com:avaliani/webapp-snapshot-java.git</connection>
         <developerConnection>scm:git:git@github.com:avaliani/webapp-snapshot-java.git</developerConnection>
         <url>git@github.com:avaliani/webapp-snapshot-java.git</url>
-      <tag>webapp-snapshot-java-1.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <properties>
